--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -99,6 +99,13 @@
     },
     {
         "publicRegistry": "docker.io",
+        "publicRepo": "grafana/alloy:v1.11.3",
+        "archive": "docker.io_grafana_alloy_v1.11.3.tar",
+        "privateRepo": "grafana/alloy:v1.11.3",
+        "description": "https://hub.docker.com/r/grafana/alloy/tags, https://quay.io/repository/giantswarm/alloy?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
         "publicRepo": "hectorm/nfs-ganesha:v10",
         "archive": "docker.io_hectorm_nfs-ganesha_v10.tar",
         "privateRepo": "hectorm/nfs-ganesha:v10",
