refactor: update documentation and configuration for VyOS and Day0 setup; bump image versions for etcd, Grafana, Traefik, and Prometheus

--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -8,8 +8,8 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "apteno/alpine-jq:2025-08-31",
-        "archive": "docker.io_apteno_alpine-jq_2025-08-31.tar",
+        "publicRepo": "apteno/alpine-jq:2025-11-23",
+        "archive": "docker.io_apteno_alpine-jq_2025-11-23.tar",
         "privateRepo": "apteno/alpine-jq:latest",
         "description": "https://hub.docker.com/r/apteno/alpine-jq/tags",
     },
@@ -22,9 +22,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.6.0",
-        "archive": "docker.io_library_traefik_v3.6.0.tar",
-        "privateRepo": "library/traefik:v3.6.0",
+        "publicRepo": "library/traefik:v3.6.2",
+        "archive": "docker.io_library_traefik_v3.6.2.tar",
+        "privateRepo": "library/traefik:v3.6.2",
         "description": "https://hub.docker.com/r/library/traefik/tags",
     },
     {
@@ -57,9 +57,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "grafana/grafana:12.2.1",
-        "archive": "docker.io_grafana_grafana_12.2.1.tar",
-        "privateRepo": "grafana/grafana:12.2.1",
+        "publicRepo": "grafana/grafana:12.3.0",
+        "archive": "docker.io_grafana_grafana_12.3.0.tar",
+        "privateRepo": "grafana/grafana:12.3.0",
         "description": "https://hub.docker.com/r/grafana/grafana/tags, https://quay.io/repository/giantswarm/grafana?tab=tags",
     },
     {
@@ -78,23 +78,23 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "prometheus/prometheus:v3.5.0",
-        "archive": "quay.io_prometheus_prometheus_v3.5.0.tar",
-        "privateRepo": "prometheus/prometheus:v3.5.0",
-        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
+        "publicRepo": "prometheus/prometheus:v3.7.2",
+        "archive": "quay.io_prometheus_prometheus_v3.7.2.tar",
+        "privateRepo": "prometheus/prometheus:v3.7.2",
+        "description": "https://quay.io/repository/prometheus/prometheus?tab=tags, https://hub.docker.com/r/prom/prometheus/tags",
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "prometheus/alertmanager:v0.28.1",
-        "archive": "quay.io_prometheus_alertmanager_v0.28.1.tar",
-        "privateRepo": "prometheus/alertmanager:v0.28.1",
-        "description": "https://hub.docker.com/r/prom/prometheus/tags, https://quay.io/repository/prometheus/prometheus?tab=tags",
+        "publicRepo": "prometheus/alertmanager:v0.29.0",
+        "archive": "quay.io_prometheus_alertmanager_v0.29.0.tar",
+        "privateRepo": "prometheus/alertmanager:v0.29.0",
+        "description": "https://quay.io/repository/prometheus/alertmanager?tab=tags, https://hub.docker.com/r/prom/alertmanager",
     },
     {
         "publicRegistry": "quay.io",
         "publicRepo": "prometheus/blackbox-exporter:v0.27.0",
         "archive": "quay.io_prometheus_blackbox-exporter_v0.27.0.tar",
         "privateRepo": "prometheus/blackbox-exporter:v0.27.0",
-        "description": "https://quay.io/repository/prometheus/blackbox-exporter?tab=tags",
+        "description": "https://quay.io/repository/prometheus/blackbox-exporter?tab=tags, https://quay.io/repository/prometheus/blackbox-exporter?tab=tags",
     },
 ]
