--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -15,9 +15,9 @@
     },
     {
         "publicRegistry": "quay.io",
-        "publicRepo": "coreos/etcd:v3.6.5",
-        "archive": "quay.io_coreos_etcd_v3.6.5.tar",
-        "privateRepo": "coreos/etcd:v3.6.5",
+        "publicRepo": "coreos/etcd:v3.6.6",
+        "archive": "quay.io_coreos_etcd_v3.6.6.tar",
+        "privateRepo": "coreos/etcd:v3.6.6",
         "description": "https://quay.io/repository/coreos/etcd?tab=tags",
     },
     {
@@ -29,9 +29,9 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/traefik:v3.6.0",
-        "archive": "docker.io_library_traefik_v3.6.0.tar",
-        "privateRepo": "library/traefik:v3.6.0",
+        "publicRepo": "library/traefik:v3.6.2",
+        "archive": "docker.io_library_traefik_v3.6.2.tar",
+        "privateRepo": "library/traefik:v3.6.2",
         "description": "https://hub.docker.com/r/library/traefik/tags",
     },
     {
@@ -60,7 +60,7 @@
         "publicRepo": "dexidp/dex:v2.44.0-alpine",
         "archive": "ghcr.io_dexidp_dex_v2.44.0-alpine.tar",
         "privateRepo": "dexidp/dex:v2.44.0-alpine",
-        "description": "https://github.com/dexidp/dex/pkgs/container/dex",
+        "description": "https://github.com/dexidp/dex/pkgs/container/dex, https://hub.docker.com/r/dexidp/dex",
     },
     {
         "publicRegistry": "docker.io",
