--- a/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/zot/attachments/values-sololab.yaml
@@ -43,12 +43,12 @@ zot:
       #   cacert: "/etc/zot/certs/ca.crt"
       # https://zotregistry.dev/v2.1.10/admin-guide/admin-configuration/#authentication
       auth:
+        failDelay: 5
         ## user pass auth
         ## ref: https://zotregistry.dev/v2.1.10/articles/authn-authz/#htpasswd
         ##
-        # htpasswd:
-        #   path: /etc/zot/htpasswd
-        # failDelay: 5
+        htpasswd:
+          path: /etc/zot/secret/htpasswd
         ## ldap auth
         ## https://zotregistry.dev/v2.1.10/articles/authn-authz/#ldap
         ##
@@ -76,7 +76,10 @@ zot:
         #       scopes: ["openid", "profile", "email", "groups"]
 
       # https://zotregistry.dev/v2.0.4/articles/authn-authz/#example-access-control-configuration
+      # https://github.com/project-zot/zot/issues/2149
       accessControl:
+        metrics:
+          users: ["admin", "metric"]
         repositories:
           "**":
             defaultPolicy: ["read"]
@@ -85,7 +88,7 @@ zot:
         adminPolicy:
           actions: ["read", "create", "update", "delete"]
           ## for user pass
-          # users: ["admin"]
+          users: ["admin"]
           ## for ldap
           groups: ["cn=app-zot-admin,ou=groups,dc=root,dc=sololab"]
           ## for oidc
@@ -105,8 +108,11 @@ zot:
   secret:
     others:
       contents:
-        # htpasswd: |
-        #   admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
+        # htpasswd -bBn <username> <password>
+        htpasswd: |
+          admin:$2y$05$S94dvsnxtN2tTONk8eTGEuABGfzDAcXXqkWbIg62mHyOe71PWRRGa
+          metric:$2y$05$aI.hrUK8PRqDnxG6ptitFO6Orzbn.ZbiVxYNuJPrJyMnVUCZLmrT.
+        # https://zotregistry.dev/v2.1.10/articles/authn-authz/#ldap
         ldap-credentials.json:
           bindDN: cn=readonly,ou=people,dc=root,dc=sololab
           bindPassword: readonly
@@ -123,8 +129,14 @@ zot:
     traefik.http.routers.zot.tls: true
     traefik.http.routers.zot.service: zot
 
-    # traefik.http.services.zot.loadBalancer.serversTransport: zot@file
-    # traefik.http.services.zot.loadbalancer.server.scheme: https
+    # add a basic auth header middleware to make metric request without authentication from prometheus
+    traefik.http.middlewares.metricBasicAuthHeader.headers.customRequestHeaders.Authorization: "Basic bWV0cmljOlBAc3N3MHJk"
+    traefik.http.routers.zot-metric.entrypoints: webSecure
+    traefik.http.routers.zot-metric.rule: "Host(`zot.day0.sololab`) && Path(`/metrics`)"
+    traefik.http.routers.zot-metric.tls: true
+    traefik.http.routers.zot-metric.middlewares: metricBasicAuthHeader@docker
+    traefik.http.routers.zot-metric.service: zot
+
     traefik.http.services.zot.loadbalancer.server.port: 5000
     traefik.http.services.zot.loadbalancer.healthCheck.path: /v2/
 
