--- a/LocalWorkShop/Sync-OCIImage/Day0.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day0.jsonc
@@ -92,6 +92,13 @@
     },
     {
         "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/node-exporter:v1.10.2",
+        "archive": "quay.io_prometheus_node-exporter_v1.10.2.tar",
+        "privateRepo": "prometheus/node-exporter:v1.10.2",
+        "description": "https://quay.io/repository/prometheus/node-exporter?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
         "publicRepo": "navidys/prometheus-podman-exporter:v1.19.0",
         "archive": "quay.io_navidys_prometheus-podman-exporter_v1.19.0.tar",
         "privateRepo": "navidys/prometheus-podman-exporter:v1.19.0",
