--- a/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
+++ b/TerraformWorkShop/Quadlet/traefik-day1/attachments/values-sololab.yaml
@@ -54,7 +54,7 @@ traefik:
             tlsChallenge: {}
         internal:
           acme:
-            caServer: https://vault.day1.sololab:8200/v1/pki_sololab_day2/acme/directory
+            caServer: https://vault.day0.sololab/v1/pki_sololab_day2/acme/directory
             certificatesDuration: 2160
             email: ""
             storage: /mnt/acmeStorage/internal.json
