consul-exporter-deploy: feat(monitoring): add consul-exporter integration with prometheus
- Add consul-exporter service configuration and DNS record
- Include consul-exporter in consul services and podman quadlet setup
- Add consul-exporter image sync configuration
- Add Grafana dashboard for consul-exporter metrics

--- a/LocalWorkShop/Sync-OCIImage/Day1.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day1.jsonc
@@ -92,6 +92,13 @@
     },
     {
         "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/consul-exporter:v0.13.0",
+        "archive": "quay.io_prometheus_consul-exporter_v0.13.0.tar",
+        "privateRepo": "prometheus/consul-exporter:v0.13.0",
+        "description": "https://quay.io/repository/prometheus/consul-exporter?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
         "publicRepo": "prometheus/node-exporter:v1.10.2",
         "archive": "quay.io_prometheus_node-exporter_v1.10.2.tar",
         "privateRepo": "prometheus/node-exporter:v1.10.2",
