--- a/LocalWorkShop/Sync-OCIImage/Day2.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day2.jsonc
@@ -8,10 +8,45 @@
     },
     {
         "publicRegistry": "docker.io",
-        "publicRepo": "library/redis:8.2.1-alpine",
-        "archive": "docker.io_library_redis_8.2.1-alpine.tar",
-        "privateRepo": "library/redis:8.2.1-alpine",
-        "description": "https://hub.docker.com/_/redis/tags",
+        "publicRepo": "library/traefik:v3.6.2",
+        "archive": "docker.io_library_traefik_v3.6.2.tar",
+        "privateRepo": "library/traefik:v3.6.2",
+        "description": "https://hub.docker.com/r/library/traefik/tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "prometheus/node-exporter:v1.10.2",
+        "archive": "quay.io_prometheus_node-exporter_v1.10.2.tar",
+        "privateRepo": "prometheus/node-exporter:v1.10.2",
+        "description": "https://quay.io/repository/prometheus/node-exporter?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "navidys/prometheus-podman-exporter:v1.19.0",
+        "archive": "quay.io_navidys_prometheus-podman-exporter_v1.19.0.tar",
+        "privateRepo": "navidys/prometheus-podman-exporter:v1.19.0",
+        "description": "https://quay.io/repository/navidys/prometheus-podman-exporter?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "enterprisedb/pgbouncer:1.24.1",
+        "archive": "quay.io_enterprisedb_pgbouncer_1.24.1.tar",
+        "privateRepo": "enterprisedb/pgbouncer:1.24.1",
+        "description": "https://quay.io/repository/enterprisedb/pgbouncer?tab=tags",
+    },
+    {
+        "publicRegistry": "quay.io",
+        "publicRepo": "fedora/postgresql-16:20251203",
+        "archive": "quay.io_fedora_postgresql-16_20251203.tar",
+        "privateRepo": "fedora/postgresql-16:20251203",
+        "description": "https://quay.io/repository/fedora/postgresql-16?tab=tags",
+    },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "library/redis:8.4.0-alpine",
+        "archive": "docker.io_library_redis_8.4.0-alpine.tar",
+        "privateRepo": "library/redis:8.4.0-alpine",
+        "description": "https://hub.docker.com/_/redis",
     },
     {
         "publicRegistry": "docker.io",
