--- a/TerraformWorkShop/Nomad/Jobs/traefik/attachments/install.traefik.yml
+++ b/TerraformWorkShop/Nomad/Jobs/traefik/attachments/install.traefik.yml
@@ -9,11 +9,21 @@ entryPoints:
     forwardedHeaders:
       trustedIPs:
         - 0.0.0.0/0
+    proxyProtocol:
+      trustedIPs:
+        - 192.168.255.1
+        - 192.168.255.2
+        - 192.168.255.20
   webSecure:
     address: :443
     forwardedHeaders:
       trustedIPs:
         - 0.0.0.0/0
+    proxyProtocol:
+      trustedIPs:
+        - 192.168.255.1
+        - 192.168.255.2
+        - 192.168.255.20
 global:
   checkNewVersion: false
   sendAnonymousUsage: false
