--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,9 @@
     "editor.defaultFormatter": "DotJoshJohnson.xml"
   },
   "[hcl]": {
-    "editor.defaultFormatter": "fredwangwang.vscode-hcl-format"
+    "editor.defaultFormatter": "twiking.vscode-hcl-format"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "yzhang.markdown-all-in-one"
   }
 }
